--- a/src/main/resources/spreadsheets/css/main.css
+++ b/src/main/resources/spreadsheets/css/main.css
@@ -1,14 +1,13 @@
-:root {
-    font-family: ".AppleSystemUIFont", Inter, sans-serif;
-    font-weight: 500;
-    font-size: 13px;
-    color: var(--font-color-normal);
-}
 
 :root {
     --font-color-normal: #000000;
+    --font-color-disabled: hsl(0, 0%, 50%);
 
     --background-normal: hsl(0, 0%, 95%);
+
+    --menu-background-normal: hsl(0, 0%, 95%);
+    --menu-background-hover: hsl(0, 0%, 90%);
+    --menu-background-active: hsl(0, 0%, 80%);
 
     --table-header-background-normal: hsl(0, 0%, 95%);
     --table-header-background-hover: hsl(0, 0%, 95%);
@@ -17,20 +16,60 @@
     --table-cell-border-selected: hsl(224, 80%, 50%);
     --table-cell-background-normal: hsl(0, 0%, 100%);
     --table-cell-background-selected: hsl(224, 76%, 95%);
+
+    --button-icon-background-color-hover: hsl(0, 0%, 50%, 30%);
+    --button-icon-background-color-active: hsl(0, 0%, 50%, 40%);
 }
 
-.s-root {
-    background: var(--background-normal);
+:root {
+    font-family: ".AppleSystemUIFont", Inter, sans-serif;
+    font-weight: 500;
+    font-size: 13px;
+    color: var(--font-color-normal);
+}
+
+root, tooltip, combobox-popup {
+    background-color: var(--background-normal);
+}
+
+popupmenu {
+    background: var(--menu-background-normal);
+    padding: 5px 0;
+}
+
+menubar {
+    background: var(--menu-background-normal);
+    border-bottom: 1px #bfbfbf solid;
+}
+
+menuitem, menu {
+    background-color: var(--menu-background-normal);
+    padding: 2px 5px;
+    color: var(--font-color-normal);
+
+    &:hover {
+        background-color: var(--menu-background-hover);
+    }
+
+    &:active {
+        background-color: var(--menu-background-active);
+    }
+}
+
+menuseparator {
+    background-color: transparent;
+    padding: 5px 0;
+    color: #bfbfbf;
 }
 
 .s-table-header, .s-table-row-header {
-    background: var(--table-header-background-normal);
+    background-color: var(--table-header-background-normal);
     padding: 2px 4px;
     color: var(--font-color-normal);
 }
 
 .s-table-header:active, .s-table-row-header:active {
-    background: var(--table-header-background-selected);
+    background-color: var(--table-header-background-selected);
 }
 
 .s-table-row-header {
@@ -43,18 +82,18 @@
 /*}*/
 
 .s-table-cell-renderer {
-    background: var(--table-cell-background-normal);
+    background-color: var(--table-cell-background-normal);
     color: var(--font-color-normal);
     padding: 2px 4px;
 }
 
 .s-table-cell-renderer:active {
-    background: var(--table-cell-background-selected);
+    background-color: var(--table-cell-background-selected);
 }
 
 .s-table-cell-renderer:focus {
     border: 2px var(--table-cell-border-selected) solid;
-    background: var(--table-cell-background-selected);
+    background-color: var(--table-cell-background-selected);
     padding: 0 2px;
 }
 
@@ -82,7 +121,50 @@
     margin: 0;
     border: 2px var(--table-cell-border-selected) solid;
     border-radius: 0;
-    background: var(--table-cell-background-normal);
+    background-color: var(--table-cell-background-normal);
     padding: 0 2px;
 }
 
+button.s-icon-button {
+    margin: 0;
+    border: none;
+    background-color: transparent;
+    padding: 3px;
+
+    &:hover {
+        background-color: var(--button-icon-background-color-hover);
+    }
+
+    &:active {
+        background-color: var(--button-icon-background-color-active);
+    }
+
+    &:disabled {
+        background-color: transparent;
+    }
+}
+
+button.s-item-button {
+    margin: 0;
+    border: none;
+    background-color: transparent;
+    padding: 10px;
+
+    &:hover {
+        background-color: var(--button-icon-background-color-hover);
+    }
+
+    &:active {
+        background-color: var(--button-icon-background-color-active);
+        color: var(--font-color-normal);
+    }
+
+    &:disabled {
+        background-color: transparent;
+        color: var(--font-color-disabled);
+    }
+}
+
+.s-dialog-content-wrapper, .s-dialog-content-wrapper-actions {
+    padding: 10px;
+}
